Text alignment correction

--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ main {
 .indented-heading {
   background-color: #ffc000;
   border-bottom: 6px solid #cc9900;
-  padding: 16px 16px 16px 40px;
+  padding: 16px 16px 16px 48px;
   margin-inline-start: -32px;
   margin-block-start: 0px;
   margin-block-end: 0px;
@@ -75,5 +75,5 @@ main {
 }
 
 .card p {
-  padding: 0px 8px;
+  padding: 0px 16px;
 }
